# xprmind

./: .gitignore  .travis.yml  LICENSE  README.md  jupyter_notebook.py  setup.cfg  setup.py
examples/notebooks/: nn-train-test.ipynb  test.ipynb
src/xprmind/: __init__.py
tests/: test___init__.py
