[metadata]
name = xprmind
version = 0.0
license = MIT
description = <A short description>
home-page = https://github.com/MrCoft/xprmind
long_description = file: README.md
author = Ondřej Műller
author_email = devcoft@gmail.com
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 1 - Planning
    Framework :: Jupyter
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   keras

[options.packages.find]
where=src
